--- a/servidor_minecraft/world/serverconfig/lostcities-server.toml
+++ b/servidor_minecraft/world/serverconfig/lostcities-server.toml
@@ -3,7 +3,7 @@
 [profiles]
 	#Block to put underneath a bed so that it qualifies as a teleporter bed
 	specialBedBlock = "minecraft:diamond_block"
-	selectedProfile = ""
+	selectedProfile = "default"
 	selectedCustomJson = ""
 	#The size of the todo queues for the lost city generator
 	#Range: 1 ~ 100000
@@ -20,4 +20,3 @@
 	avoidVillages = true
 	#If true then avoid flattening the terrain around the city in case there was a structure that was avoided
 	avoidFlattening = true
-
